# declarative2024

./: Declarative2024-ASP-Insource-Testing.key  README.md  crash.lp  hamiltonian-cycle-1.lp  hamiltonian-cycle-2.lp  hamiltonian-cycle-3.lp  hamiltonian-cycle.lp  howtotest.lp  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
snippets/: choice.lp  first_encounter.lp  party.lp  party2.lp  python.lp
